# shacl-generator

./: .gitignore  README.md  datafields.yaml  generator_context.json  pyproject.toml
instances/joe_burger/: instance.ttl  properties.yaml
instances/test/: instance.ttl  properties.yaml
shacl_generator/: app.py  datafields.py  examples.py  generator.py  instances.py  llm.py  shapes.py
shapes/-2163178036961438024/: legal_text.txt  metadata.yaml  shape.ttl
shapes/-3064637830712742680/: legal_text.txt  metadata.yaml  shape.ttl
shapes/-4387164010627753518/: metadata.yaml  shape.ttl
shapes/2257752144615985189/: legal_text.txt  metadata.yaml  shape.ttl
shapes/3016779943002168827/: metadata.yaml  shape.ttl
shapes/4074370632666207250/: legal_text.txt  metadata.yaml  shape.ttl
shapes/4349880998588129137/: legal_text.txt  metadata.yaml  shape.ttl
shapes/4739785847190331013/: legal_text.txt  metadata.yaml  shape.ttl
shapes/6155279888362140727/: legal_text.txt  metadata.yaml  shape.ttl
shapes/7934576859435941701/: legal_text.txt  metadata.yaml  shape.ttl
shapes/7985640119732562006/: legal_text.txt  metadata.yaml  shape.ttl
